Review applyed fixes